--- a/science/index.html
+++ b/science/index.html
@@ -571,8 +571,8 @@
         <!-- @@check links in article -->
       </li>
       <li>Ansis Helmanis: 
-        <a href="http://www.raps.org/focus-online/news/news-article-view/article/4097/">China 
-        to Require Registration of all Clinical Trials, Bioequivalence Studies</a>,
+        <a href="https://www.raps.org/regulatory-focus%E2%84%A2/news-articles/2013/9/china-to-require-registration-of-all-clinical-trials,-bioequivalence-studies">China to Require Registration of all Clinical Trials, Bioequivalence Studies</a>,
+        <!--Old URL: http://www.raps.org/focus-online/news/news-article-view/article/4097/ -->
         Regulatory Affairs Professionals Society (<abbr>RAPS</abbr>), 19 September 2013.
       </li>
       <li>
