--- a/lijst.html
+++ b/lijst.html
@@ -525,6 +525,10 @@
   <section id="misc">
     <h2>Various Other Topics</h2>
     <ul>
+      <li>Sampson, Geoffrey:
+        <i class="booktitle">[Educating Eve: ] The 'Language Instinct' Debate</i>. Continuum, 2005. (240 pages)
+        <a href="https://www.bloomsbury.com/uk/the-language-instinct-debate-9780826473851/"><abbr>ISBN</abbr> 9780826473851 (paperback)</a>.
+      </li>
       <li class="perhapsnot">Rose, Todd:
         <i class="booktitle">The End of Average: How We Succeed in a World That Values Sameness</i>. HarperCollins, 2016. (256 pages)
         <a href="https://www.harpercollins.com/9780062358363/the-end-of-average/"><abbr>ISBN</abbr> 9780062358363</a>.
