Add: Airaksinen: Vagaries of Desire: A Collection of Philosophical Essays

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1834,6 +1834,11 @@
         <q>In a small literary gem full of sardonic wit, brilliant insights, and provocative criticism Witold Gombrowicz discusses
         Kant, Hegel, Schopenhauer, Kierkegaard, Sartre, and Heidegger in six "one-hour" essays—and addresses Marxism in a "fifteen-minute" piece.</q>
       </li>
+      <li>Airaksinen, Timo:
+        <i class="booktitle">Vagaries of Desire: A Collection of Philosophical Essays</i>. Brill, 2019.
+        <a href="https://brill.com/view/title/38852?language=en"><abbr>ISBN</abbr> 978-90-04-41030-5 (ebook <abbr>PDF</abbr>; Open Access)</a>.
+        <!--@@download -->
+      </li>
       <!--@@section Socrates:-->
       <li><span lang="de">Altrichter, Rudolf; Ehrensperger, Elisabeth:
         <i class="booktitle">Sokrates</i>. <abbr>UTB</abbr> Profile. Bern: Haupt</span>, 2010. (114 pages)
