Add: Konner: Philosophy, cranes and skyhooks

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -204,6 +204,11 @@
         in which the author excerpted seven tools from his book
         <i class="booktitle">Intuition Pumps and Other Tools for Thinking</i>.
       </li>
+      <li>Konner, Melvin:
+        <a href="https://www.nature.com/articles/497184a">Philosophy: Deepities, cranes and skyhooks</a>,
+        <i class="journal">Nature</i>, 497, pages1 84–185 (2013).
+        <br />This is a review of Daniel Dennett's book <i class="booktitle">Intuition Pumps and Other Tools for Thinking</i>.
+      </li>
       <li>Peter Boghossian on the David Pakman Show:
         <a href="https://www.youtube.com/watch?v=-XwM3oGlOBQ">Faith <abbr>vs</abbr> Knowledge (<abbr>Pt</abbr> 1)</a> (12 minutes),
         <a href="https://www.youtube.com/watch?v=zKdeAQjTXEE">Defund "Radical Ideologues" in Gender Studies (<abbr>Pt</abbr> 2)</a> (15 minutes),
