Add: Florey: René Girard, critique littéraire

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -543,6 +543,12 @@
           <a href=""><abbr>ISBN</abbr> </a>. 
         </li-->
       </ul>
+
+      <p>Not necessarily by the same René Girard: <i class="booktitle" lang="fr">Marion la mal aimée</i> (novel, published by Solar in 1962).
+        See <a href="https://catalogue.bnf.fr/ark:/12148/cb41650420d"><i class="booktitle" lang="fr">Marion la mal aimée</i> in the <abbr>BNF</abbr> catalogue</a>
+        and in
+        <a href="https://www.worldcat.org/title/marion-la-mal-aimee-roman/oclc/762735484&referer=brief_results">WorldCat</a>.
+      </p>
     </section>
 
     <section>
@@ -650,6 +656,13 @@
           <i class="booktitle">L'auto-organisation. De la physique au politique</i>. Colloque de Cerisy, 1981. Editions du Seuil, 1983, 1994. (560 pages)
           <a href="http://www.seuil.com/ouvrage/l-auto-organisation-de-la-physique-au-politique-colloque-de-cerisy/9782020220439" hreflang="fr"><abbr>ISBN</abbr> 9782020220439</a>.
           <br />(<a href="http://www.ccic-cerisy.asso.fr/autoorgTM83.html" hreflang="fr">Centre Culturel International de Cerisy</a>.)
+        </li>
+        <li><span lang="fr">Florey, Sonya:
+          <i class="booktitle">René Girard, critique littéraire ?</i>. Archipel Essais</span>, 2003. (97 pages)
+          <a href="http://www.lcdpu.fr/livre/?GCOI=27000100979080" hreflang="fr"><abbr>ISBN</abbr> 978-2-940355-05-1</a>.
+          <!--Archipel Essais: http://wp.unil.ch/archipelessais/florey/
+            https://www.lalibrairie.com/livres/rene-girard-critique-litteraire--_0-348008_9782940355051.html?ctx=060f1f0523f528c4a2d638eeec2a7c01
+          -->
         </li>
         <li>Fornari, Giuseppe:
           <i class="booktitle">A God Torn to Pieces: The Nietzsche Case</i>. Studies in Violence, Mimesis, &amp; Culture. Michigan State University Press, 2013. (162 pages)
