Add: Tomatoes, or How Not To Define Art

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -803,6 +803,10 @@
 
     <h2>Miscellaneous Other Links</h2>
     <ul>
+      <li>
+        <a href="https://www.youtube.com/watch?v=XmxIK9p0SNM">Tomatoes, or How Not To Define "Art"</a>
+        (<i class="ytchannel">Innuendo Studios</i> on YouTube, 12 minutes, 02.01.2017).
+      </li>
       <li>Bloom, Harold:
         <a href="https://fivebooks.com/best-books/harold-bloom-on-literary-criticism/">Harold Bloom recommends the best of Literary Criticism</a>,
         <i class="website">Five Books</i> (no date). The recommendations are:
