--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -150,6 +150,10 @@
         <a href="https://www.marxists.org/deutsch/philosophie/hegel/index.htm">G.W.F. Hegel</a>:
         links to works (in German) hosted in Marxists.org.
       </li>
+      <li><span lang="de">
+        <a href="http://texte.phil-splitter.com/index.html" hreflang="de">Hegel-Texte</a>,
+        <i class="website">Phil-Splitter</i></span>. Works by Hegel in German.
+      </li>
       <li>Sadler, Gregory B.:
         <a href="https://www.youtube.com/playlist?list=PL4gvlOxpKKIgR4OyOt31isknkVH2Kweq2">Half Hour Hegel: The Complete Phenomenology of Spirit</a>:
         a series of over 200 thirty-minute YouTube videos on Hegel's
