--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -154,6 +154,10 @@
         <a href="http://texte.phil-splitter.com/index.html" hreflang="de">Hegel-Texte</a>,
         <i class="website">Phil-Splitter</i></span>. Works by Hegel in German.
       </li>
+      <li><span lang="de">
+        <a href="http://www.zeno.org/Philosophie/M/Hegel,+Georg+Wilhelm+Friedrich" hreflang="de">Georg Wilhelm Friedrich Hegel</a>,
+        <i class="website">Zeno.org</i></span>. Works by Hegel in German.
+      </li>
       <li>Sadler, Gregory B.:
         <a href="https://www.youtube.com/playlist?list=PL4gvlOxpKKIgR4OyOt31isknkVH2Kweq2">Half Hour Hegel: The Complete Phenomenology of Spirit</a>:
         a series of over 200 thirty-minute YouTube videos on Hegel's
