--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -158,6 +158,13 @@
         <a href="http://www.zeno.org/Philosophie/M/Hegel,+Georg+Wilhelm+Friedrich" hreflang="de">Georg Wilhelm Friedrich Hegel</a>,
         <i class="website">Zeno.org</i></span>. Works by Hegel in German.
       </li>
+      <li><span lang="de">
+        <a href="https://hegel.de/" hreflang="de">G.W.F. Hegel: Werke</a>,
+        <i class="website">Hegel-Institut Berlin <abbr>e.V.</abbr></i></span>.
+        Online edition of Hegel's complete works. Only
+        <a href="https://hegel.de/werke_frei/startfree.html" hreflang="de" lang="de">Enzyklopädie der philosophischen Wissenschaften im Grundrisse</a>
+        is freely accessible. Access to the other texts requires a subscription.
+      </li>
       <li>Sadler, Gregory B.:
         <a href="https://www.youtube.com/playlist?list=PL4gvlOxpKKIgR4OyOt31isknkVH2Kweq2">Half Hour Hegel: The Complete Phenomenology of Spirit</a>:
         a series of over 200 thirty-minute YouTube videos on Hegel's
