Add: Tamerius: What Radical Atheists Can Teach Us About Talking With Trump Voters

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -400,6 +400,10 @@
         <a href="https://www.youtube.com/watch?v=khrUqBiB4fc" lang="fr">Nous faisons fausse route, Anthony Magnabosco - Cours "d'épistémologie de rue" (<span lang="en">Street Epistemology</span>)</a>
         (<i class="ytchannel">Psycholucide</i> on YouTube, 58 minutes, 17.12.2019).
       </li>
+      <li>Tamerius, Karin:
+        <a href="https://medium.com/progressively-speaking/what-radical-atheists-can-teach-us-about-talking-with-trump-voters-766b7ff69f0e">What Radical Atheists Can Teach Us About Talking With Trump Voters</a>,
+        <i class="blog">Progressively Speaking</i>, 01.06.2020 (five-minute read).
+      </li>
       <li>German articles about street epistemology:
         <ul>
           <li><span lang="de">Wolf, Tobias:
