Add: Wilson: The trolley problem problem

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -266,6 +266,10 @@
         Schroeder, Timothy: <a href="https://ndpr.nd.edu/news/ethics-without-morals-in-defence-of-amorality/">Ethics Without Morals: In Defence of Amorality</a>
         (<i class="website">Notre Dame Philosophical Reviews</i>, 16.12.2012.
       </li>
+      <li>Wilson, James:
+        <a href="https://aeon.co/essays/what-is-the-problem-with-ethical-trolley-problems">The trolley problem problem</a>,
+        <i class="website">Aeon</i>, 28.05.2020.
+      </li>
       <!--Business ethics:-->
       <li>
         <a href="http://www.ethics.org/">Ethics &amp; Compliance Initiative (<abbr>ECI</abbr>)</a> (<abbr>USA</abbr>):
