Add: The Complete Street Epistemology Guide

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -400,6 +400,14 @@
         <a href="https://www.youtube.com/watch?v=khrUqBiB4fc" lang="fr">Nous faisons fausse route, Anthony Magnabosco - Cours "d'épistémologie de rue" (<span lang="en">Street Epistemology</span>)</a>
         (<i class="ytchannel">Psycholucide</i> on YouTube, 58 minutes, 17.12.2019).
       </li>
+      <li>
+        <a href="https://streetepistemology.com/publications/the_complete_se_guide">The Complete Street Epistemology Guide</a>,
+        <i class="website">StreetEpistemology.com</i>.
+        <br />This page provides direct links to the guide in <abbr>PDF</abbr> and <abbr>EPUB</abbr> formats.
+        Since the guide is a living document on
+        <a href="https://goo.gl/yvjOAM" title="The Complete Street Epistemology Guide on Google Docs">Google Docs</a>,
+        you can always download the latest version from there.
+      </li>
       <li>Tamerius, Karin:
         <a href="https://medium.com/progressively-speaking/what-radical-atheists-can-teach-us-about-talking-with-trump-voters-766b7ff69f0e">What Radical Atheists Can Teach Us About Talking With Trump Voters</a>,
         <i class="blog">Progressively Speaking</i>, 01.06.2020 (five-minute read).
