Add: Hui: In praise of aphorisms

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1852,6 +1852,14 @@
         <i class="booktitle">Philosophy before the Greeks: The Pursuit of Truth in Ancient Babylonia</i>. Princeton University Press, 2015. (312 pages)
         <a href="https://press.princeton.edu/books/paperback/9780691176352/philosophy-before-the-greeks"><abbr>ISBN</abbr> 9780691176352</a>.
       </li>
+      <li>Hui, Andrew:
+        <a href="https://aeon.co/essays/aphorisms-tell-philosophys-history-as-fragments-not-systems">In praise of aphorisms</a>,
+        <i class="website">Aeon</i>, 01.06.2020.
+        <br />Subtitle: <q>What if we see the history of philosophy not as a grand system of sustained critique but as a series of brilliant fragments?</q>
+        Andre Hui is author of
+        <a href="https://press.princeton.edu/books/hardcover/9780691188959/a-theory-of-the-aphorism"><i class="booktitle"> A Theory of the Aphorism: From Confucius to Twitter</i></a>
+        (Princeton University Press, 2019).
+      </li>
     </ul>
 
     <h2>Death</h2>
