Add: Maxwell: Our Fundamental Problem: A Revolutionary Approach to Philosophy

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1959,6 +1959,10 @@
         <i class="booktitle">How to be a Failure and Still Live Well</i> by Beverley Clack.
         <!--@@summarise-->
       </li>
+      <li>Maxwell, Nicholas:
+        <i class="booktitle">Our Fundamental Problem: A Revolutionary Approach to Philosophy</i>. McGill-Queen's University Press, 2020. (232 pages)
+        <a href="https://www.mqup.ca/our-fundamental-problem-products-9780228001522.php?page_id=73"><abbr>ISBN</abbr> 9780228001522</a>.
+      </li>
       <li>
         <a href="https://www.youtube.com/watch?v=nQHBAdShgYI">The Trouble with Transporters</a>
         is a 6-minute video by <abbr>CGP</abbr> Grey
