Add: modern class war against the poor, especially in the USA

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2920,6 +2920,30 @@
       * TheRealNews: "Thomas Frank on the Demise of the Democratic Party", YouTube, 19.06.2017: https://www.youtube.com/watch?v=OUkA-5Vd3E0 
     -->
 
+    <p>The modern class war against the poor, especially in the <abbr>USA</abbr>:</p>
+    <ul>
+      <li>Democracy Now!:
+        <a href="https://www.youtube.com/watch?v=qhuGU5LS0IE">David Cay Johnston: Class War Is Being Waged by the Rich Against the Poor</a>
+        (YouTube, 14 minutes, 21.01.2015).
+        <a href="https://en.wikipedia.org/wiki/David_Cay_Johnston">David Cay Johnston</a> is the author of
+        <i class="booktitle">Divided: The Perils of Our Growing Inequality</i>
+        (The New Press, 2014; <a href="http://thenewpress.com/books/divided"><abbr>ISBN</abbr> 978-1-62097-085-0</a>).
+        <!-- https://lccn.loc.gov/2013041718 & HM821 .D585 2014
+          See also:
+          * Ben Stein: "In Class Warfare, Guess Which Class Is Winning", New York Times, 26.11.2006: Warren Buffett: "“There’s class warfare, all right,” Mr. Buffett said, “but it’s my class, the rich class, that’s making war, and we’re winning.”"
+          * C. Robert Gibson: "4 Ways GOP Governors Wage Class War", Huffpost, the blog, 21.06.2013: https://www.huffingtonpost.com/carl-gibson/4-ways-gop-governors-wage_b_3475101.html 
+        -->
+      </li>
+      <!--Also on inequality:
+        * Yves Smith: "Debunking Mainstream Economists on Secular Stagnation and the Loanable Funds Fallacy", Naked Capitalism, 22.12.2017. https://www.nakedcapitalism.com/2017/12/debunking-mainstream-economists-secular-stagnation-loanable-funds-fallacy.html
+        * Smith's articles is also discussed by Thom Hartmann: "Do The Morbidly Rich Have Complete Economic Control Yet Can we stop them before they do", 27.12.2017: https://www.youtube.com/watch?v=tUDZXjf2VO0
+      -->
+      <li>Democracy Now!:
+        <a href="https://www.youtube.com/watch?v=huilZjeSI9c">Yanis Varoufakis on Global Capitalism &amp; How Trump’s Tax Plan is Class War Against the Poor</a>
+        (YouTube, 6 minutes, 03.11.2017).
+      </li>
+    </ul>
+
     <h3>The War Machine</h3>
     <ul>
       <li>Anand Gopal: <i class="booktitle">No Good Men Among the Living: America, The Taliban and the War Through Afghan Eyes</i>. Picador, 2015.</li>
