--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2942,11 +2942,25 @@
         <a href="https://www.youtube.com/watch?v=huilZjeSI9c">Yanis Varoufakis on Global Capitalism &amp; How Trump’s Tax Plan is Class War Against the Poor</a>
         (YouTube, 6 minutes, 03.11.2017).
       </li>
+      <li>New Economic Thinking:
+        <a href="https://www.youtube.com/watch?v=ok7ZJ8mS19Y">David Cay Johnston: The Perils Of Our Growing Inequality</a>
+        (YouTube, 34 minutes, 01.06.2014).<!--@@rewatch!!-->
+      </li>
+      <li>Wikipedia:
+        <a href="https://en.wikipedia.org/wiki/Buckley_v._Valeo">Buckley <abbr>v.</abbr> Valeo (1967)</a> (a <abbr>US</abbr> constitutional law Supreme Court case on campaign finance) and
+        <a href="https://en.wikipedia.org/wiki/Citizens_United_v._FEC">Citizens United <abbr>v.</abbr> <abbr>FEC</abbr> (2010)</a>
+        (another <abbr>US</abbr> constitutional law and corporate law case).
+        <br />On Buckley <abbr>v.</abbr> Valeo, see also
+        <a href="https://www.youtube.com/watch?v=FnYo8nkdOOU">Panel - A Landmark Decision Turns 40: A Conversation on Buckley <abbr>v.</abbr> Valeo</a> and
+        <a href="https://www.youtube.com/watch?v=S_ULr_jV2Q8">Q&amp;A - A Landmark Decision Turns 40: A Conversation on Buckley <abbr>v.</abbr> Valeo</a> (Brooklyn Law School, 26.01.2016).
+      </li>
     </ul>
 
     <h3>The War Machine</h3>
     <ul>
-      <li>Anand Gopal: <i class="booktitle">No Good Men Among the Living: America, The Taliban and the War Through Afghan Eyes</i>. Picador, 2015.</li>
+      <li>Anand Gopal: <i class="booktitle">No Good Men Among the Living: America, The Taliban and the War Through Afghan Eyes</i>. Picador, 2015.
+        <!-- https://lccn.loc.gov/2014001384 & DS371.412 .G66 2014 -->
+      </li>
       <li>Ryan Grim: "The Taliban Tried to Surrender and the <abbr>U.S.</abbr> Rebuffed Them. Now Here We Are." <i class="website">The Intercept</i>, 22.08.2017.
         <br />See also: The Jimmy Dore Show:
         <a href="https://www.youtube.com/watch?v=RG629uoizro">Fact: Taliban Has Surrendered Multiple Times - US Rebuffed Them</a>
