Add: The System: Who Rigged It, How We Fix It with Robert Reich

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2954,6 +2954,16 @@
         <a href="https://www.youtube.com/watch?v=FnYo8nkdOOU">Panel - A Landmark Decision Turns 40: A Conversation on Buckley <abbr>v.</abbr> Valeo</a> and
         <a href="https://www.youtube.com/watch?v=S_ULr_jV2Q8">Q&amp;A - A Landmark Decision Turns 40: A Conversation on Buckley <abbr>v.</abbr> Valeo</a> (Brooklyn Law School, 26.01.2016).
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=Y_sjfchNsiM">The System: Who Rigged It, How We Fix It with Robert Reich</a>
+        (<i class="ytchannel">Robert Reich</i> on YouTube, 12 minutes, 24.03.2020).
+        <br />This video summarises Robert Reich's book
+        <i class="booktitle">The System: Who Rigged It, How We Fix It</i>.
+        For a transcript of the video, see the webpage
+        <a href="https://robertreich.org/post/613497899639291904">Robert Reich (The System: Who Rigged It, How We Fix It  The...)</a>
+        (24.03.2020) on the author's website.
+        <!--Reich also wrote "I'll Be Short: Essentials for a Decent Working Society", Beacon Press, 2003: http://www.beacon.org/Ill-Be-Short-P338.aspx -->
+      </li>
     </ul>
 
     <h3>The War Machine</h3>
