Add: Fisher: Capitalist Realism: Is There No Alternative?

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2964,6 +2964,15 @@
         (24.03.2020) on the author's website.
         <!--Reich also wrote "I'll Be Short: Essentials for a Decent Working Society", Beacon Press, 2003: http://www.beacon.org/Ill-Be-Short-P338.aspx -->
       </li>
+      <li>Fisher, Mark:
+        <i class="booktitle">Capitalist Realism: Is There No Alternative?</i> Zero Books, 2009.
+        <a href="https://www.johnhuntpublishing.com/zer0-books/our-books/capitalist-realism"><abbr>ISBN</abbr> 978-1-84694-317-1</a>.
+        See also <a href="https://en.wikipedia.org/wiki/Capitalist_Realism:_Is_There_No_Alternative%3F">Capitalist Realism: Is There No Alternative?</a>
+        on Wikipedia.
+        <!--Reading capitalist realism / edited by Alison Shonkwiler & Leigh Claire La Berge. Iowa City : University of Iowa Press, [2014]
+                https://lccn.loc.gov/2013952707 & PS374.R37 R43 2014
+        -->
+      </li>
     </ul>
 
     <h3>The War Machine</h3>
