Add: Obit Omit: What the Media Leaves Out of John McCain’s Record of Militarism and Misogyny

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -3101,6 +3101,10 @@
         <a href="http://www.normansolomon.com/norman_solomon/war_made_easy/">War Made Easy</a>:
         articles tagged &ldquo;War Made Easy&rdquo; on the author's website.
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=6QqrVMvxOIg">Obit Omit: What the Media Leaves Out of John McCain’s Record of Militarism and Misogyny</a>
+        (<i class="ytchannel">Democracy Now!</i> on YouTube, 23 minutes, 27.08.2018).
+      </li>
       <!--
       <li>
         <a href=""></a>
