Add: Rubin: The Forever War’s Cheerleaders

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2931,7 +2931,7 @@
         <!-- https://lccn.loc.gov/2013041718 & HM821 .D585 2014
           See also:
           * Ben Stein: "In Class Warfare, Guess Which Class Is Winning", New York Times, 26.11.2006: Warren Buffett: "“There’s class warfare, all right,” Mr. Buffett said, “but it’s my class, the rich class, that’s making war, and we’re winning.”"
-          * C. Robert Gibson: "4 Ways GOP Governors Wage Class War", Huffpost, the blog, 21.06.2013: https://www.huffingtonpost.com/carl-gibson/4-ways-gop-governors-wage_b_3475101.html 
+          * C. Robert Gibson: "4 Ways GOP Governors Wage Class War", Huffpost, the blog, 21.06.2013: https://www.huffingtonpost.com/carl-gibson/4-ways-gop-governors-wage_b_3475101.html
         -->
       </li>
       <!--Also on inequality:
@@ -3104,6 +3104,17 @@
       <li>
         <a href="https://www.youtube.com/watch?v=6QqrVMvxOIg">Obit Omit: What the Media Leaves Out of John McCain’s Record of Militarism and Misogyny</a>
         (<i class="ytchannel">Democracy Now!</i> on YouTube, 23 minutes, 27.08.2018).
+      </li>
+      <li>Rubin, Lyle Jeremy:
+        <a href="https://www.thenation.com/article/the-forever-wars-cheerleaders/">The Forever War’s Cheerleaders</a>,
+        <i class="magazine">The Nation</i>, 19.09.2018.
+        <!--@@PDF-->
+      </li>
+      <li>
+        <a href="https://therealnews.com/stories/an-ex-marines-view-of-the-us-forever-war">An Ex-Marine’s View of the US ‘Forever War’</a>,
+        <i class="website">The Real Networks</i>, 25.09.2018.<!--@@download MP3-->
+        The video is also available on
+        <a href="https://www.youtube.com/watch?v=YgCMhz9OPG4">YouTube</a> (12 minutes).
       </li>
       <!--
       <li>
