Add: Hitchens on Compelling Arguments for the Existence of God

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -335,6 +335,7 @@
           &ldquo;Atheists have been taught to unthinkingly repeat a slogan, so to counter that, memorize what I just said and say it back to them verbatim!&rdquo;
           <br />The jokes almost write themselves.
         </blockquote>
+        <!--See also: How Can the Universe Not Have a Beginning? | Roger Penrose (6 minutes): https://www.youtube.com/watch?v=J98aF22ErZc -->
       </li>
       <!-- Peter Millican's refutation of Anselm argument:
         https://duckduckgo.com/?q=%22Peter+Millican%22+anselm+god&t=ffab&ia=web
@@ -343,6 +344,11 @@
         <a href="http://millican.org/papers/2004OntArgMind.pdf">The One Fatal Flaw in Anselm's Argument <span class="format-pdf">(<abbr>PDF</abbr>)</span></a>,
         <i class="journal">Mind</i>, 113 (2004): 437-476.
         <!--http://millican.org/research.htm-->
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=MTvrLR3X9ME">Hitchens on Compelling Arguments for the Existence of God</a>
+        (<i class="ytchannel">FORA.tv</i> on YouTube, 2 minutes, 09.04.2011).
+        <br />From a conversation with Salman Rushdie recorded on 8 June 2010.
       </li>
     </ul>
 
