Add: Leaman: The Qur'an: A Philosophical Guide

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -648,6 +648,10 @@
         <a href="https://www.equinoxpub.com/home/quran-about-this-translation/">excerpt &ldquo;About this Translation&rdquo;</a>.
         <!--@@check!-->
       </li>
+      <li>Leaman, Oliver:
+        <i class="booktitle">The Qur'an: A Philosophical Guide</i>. Bloomsbury, 2016. (328 pages)
+        <a href="https://www.bloomsbury.com/uk/the-quran-a-philosophical-guide-9781474216180/"><abbr>ISBN</abbr> 9781474216180</a>.
+      </li>
       <li>Magnabosco, Anthony:
         <a href="https://twitter.com/magnabosco/status/1230276133985439745">“My holy book is just as testable as a history book.” What’s a good question to ask in return?</a>
         (<i class="website">Twitter</i>, 20.02.2020).
