--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -771,9 +771,9 @@
 
     <h2>Misconceptions about Atheism</h2>
     <ul>
-      <li>The Young Turks:
+      <li>
         <a href="https://www.youtube.com/watch?v=EOIXCj-yppU">Atheists Are Perverts &amp; Molesters, Says Ted Cruz's Dad</a>
-        (YouTube, 4 minutes, 15.11.2013).
+        (<i class="ytchannel">The Young Turks</i> on YouTube, 4 minutes, 15.11.2013).
       </li>
       <li><a href="https://www.theatheistbook.com/">A Better Life: 100 Atheists Speak Out on Joy &amp; Meaning in a World Without God</a>.
       </li>
@@ -782,6 +782,11 @@
         <br />According to the publisher, the book's selling points include the followig:
         <q>In these essays, nineteen leading philosophers explore the inner life of atheism and shatter common stereotypes surrounding atheism.</q>
         <q>The collected essays prove that morality is independent of the existence of God by using arguments that date back to Plato.</q>
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=zmrpiCsuv6w">Atheists Are Murderers - Debunked (Jordan Peterson)</a>
+        (<i class="ytchannel">Rationality Rules</i> on YouTube, 13 minutes, 30.06.2018).
+        <!--@@rewatch and summarise-->
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=P5ZOwNK6n9U">Ricky Gervais And Stephen Go Head-To-Head On Religion</a>
