Add: Sutton & Barto: Reinforcement Learning

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -736,6 +736,13 @@
         Giles McMullen's YouTube video "Could this be the MOST UNDERRATED beginners PYTHON BOOK ?", 4 minutes, 14.02.2019: https://www.youtube.com/watch?v=m5gq_-x8DT8
       </li>
       -->
+      <li>Sutton, Richard S.; Barto, Andrew G.:
+        <i class="booktitle">Reinforcement Learning</i>. Second editin.
+        Adaptive Computation and Machine Learning series. <abbr>MIT</abbr> Press, 2018. (552 pages)
+        <a href="https://mitpress.mit.edu/books/reinforcement-learning-second-edition"><abbr>ISBN</abbr> 9780262039246</a>.
+        <br />See also the authors' website:
+        <a href="http://incompleteideas.net/book/the-book-2nd.html">Reinforcement Learning: An Introduction</a>.
+      </li>
       <li>Shukla, Nishant:
         <i class="booktitle">Machine Learning with TensorFlow</i>. Manning Publications, January 2018. (272 pages)
         <a href="https://www.manning.com/books/machine-learning-with-tensorflow"><abbr>ISBN</abbr> 9781617293870</a>.
