Add: Questions No Atheist Can Answer – Debunked

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -784,6 +784,11 @@
         <q>The collected essays prove that morality is independent of the existence of God by using arguments that date back to Plato.</q>
       </li>
       <li>
+        <a href="https://www.youtube.com/watch?v=BaVIOCsJPjM">Questions No Atheist Can Answer – Debunked</a>
+        (<i class="ytchannel">Rationality Rules</i> on YouTube, 14 minutes, 10.04.2018).
+        <!--@@rewatch and summarise-->
+      </li>
+      <li>
         <a href="https://www.youtube.com/watch?v=zmrpiCsuv6w">Atheists Are Murderers - Debunked (Jordan Peterson)</a>
         (<i class="ytchannel">Rationality Rules</i> on YouTube, 13 minutes, 30.06.2018).
         <!--@@rewatch and summarise-->
