Replace www.humanities2017.org (outdated); move link to bottom

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -76,11 +76,6 @@
       </p>
     </blockquote>
 
-    <p style="background-color: #FDDB58; padding: 16px;">
-      <strong><a href="http://www.humanities2017.org/en">World Humanities Conference</a>,
-      <span lang="fr">Liège</span>, Belgium, 6-12 August 2017.</strong> 
-      <!--http://www.unesco.org/new/en/social-and-human-sciences/themes/most-programme/humanities-and-philosophy/world-humanities-conference/-->
-    </p>
 
     <h2>The Humanities</h2>
     <p>The English language makes a distinction between &ldquo;science&rdquo;
@@ -117,7 +112,7 @@
       <a href="https://en.wikipedia.org/wiki/New_College_of_the_Humanities">New
       College of the Humanities</a> in London, which started offering tuition
       in 2012. 
-      <!-- @@more about NCH: https://duckduckgo.com/?q=grayling+found+humanities+london  -->
+      <!--@@more about NCH: https://duckduckgo.com/?q=grayling+found+humanities+london  -->
     </p>
     <p>(Note: another distinction is between sciences, humanities and 
       &ldquo;<a href="https://en.wikipedia.org/wiki/Social_science">social
@@ -128,7 +123,7 @@
       lang="de">Sozialwissenschaften</a> (in German).
       There are also defences of the social sciences similar to the 
       defences of the humanities.)
-      <!-- Defences on social sciences:
+      <!--Defences on social sciences:
         Simon Bastow: The Impact of the Social Sciences: How Academics and their Research Make a Difference.
         John D. Brewer: The Public Value of the Social Sciences: An Interpretative Essay.
       -->
@@ -137,10 +132,10 @@
     <ul>
       <li>
         <a href="https://www.youtube.com/watch?v=4D0fLisyjBY">Why Arts Graduates Are Under-Employed</a> 
-        is a YouTube video by The School of Life.<!--@@add date and lenght-->
+        is a YouTube video by The School of Life.<!--@@add date and length-->
         It discusses the value of arts and humanities, which includes philosophy.
       </li>
-      <!-- Oxford Open Content: The Value of Humanities: http://podcasts.ox.ac.uk/series/value-humanities (2013) -->
+      <!--Oxford Open Content: The Value of Humanities: http://podcasts.ox.ac.uk/series/value-humanities (2013) -->
       <li>Nussbaum, Martha:
         <a href="https://www.youtube.com/watch?v=RAwi7UKK-j8">Why Democracy Needs the Humanities</a>
         (<a href="http://www.css.edu/about/spotlight-arts-and-lectures/lectures/alworth-center-for-peace-and-justice-lectures.html">Alworth Center for Peace and Justice</a>, 
@@ -156,7 +151,7 @@
         <i class="booktitle">Cultivating Humanity: A Classical Defense of Reform in 
         Liberal Education</i> (Harvard University Press, 1998.
         <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674179493"><abbr>ISBN</abbr> 9780674179493</a>).
-        <!-- See also, possibly:
+        <!--See also, possibly:
           "Humanistic Education & Social Justice": https://www.youtube.com/watch?v=A_IR1ClD3Ns 
           "Creating Capabilities: The Human Development Approach": https://www.youtube.com/watch?v=A_IR1ClD3Ns 
           "Why Legal Education Needs the Humanities": https://www.youtube.com/watch?v=ocJ0zVmWMkg 
@@ -194,7 +189,7 @@
         <br/>This book available on a <abbr title="Creative Commons">CC</abbr> BY 
         licence; you can find it for free on
         <a href="http://www.palgraveconnect.com/pc/browse/listcollection?pcode=oa">Palgrave Connect</a>
-        <!-- direct link: http://www.palgraveconnect.com/pc/doifinder/10.1057/9781137500281 -->
+        <!--direct link: http://www.palgraveconnect.com/pc/doifinder/10.1057/9781137500281 -->
         and 
         <a href="https://www.researchgate.net/publication/268513349_Humanities_World_Report_2015">ResearchGate</a>.
       </li>
@@ -264,7 +259,7 @@
         <a href="http://press.princeton.edu/titles/10957.html"><abbr>ISBN</abbr> 9780691176680</a>.
         <!--@@sample: chapter 1: http://press.princeton.edu/chapters/s10957.pdf -->
       </li>
-      <!-- See also: 
+      <!--See also: 
         * "Scholar to Address Value of Humanities at Public Universities November 4", University of Tennessee, Knoxville: http://tntoday.utk.edu/2015/10/20/scholar-address-humanities-public-universities-november-4/ 
         * Matthew Long-Middleton & Ross Stinemetz: "The Value Of The Humanities", KCUR, 2 July 2013: http://kcur.org/post/value-humanities#stream/0 
           - has link to http://humanitiescommission.org/ 
@@ -412,7 +407,7 @@
         "Emmanuel Kant's 'Dare To Know' represented a foundational challenge to the Enlightenment. Yet, even today humanity finds it difficult to embrace new knowledge. This talk calls for the affirmation of the spirit of experimentation in every dimension of life."
       Frank Furedi: "The younger generation has been infantilised by the baby boomers", IQ2 debates, 2011: https://www.youtube.com/watch?v=c53Udp-cDgc 
     -->
-    <!-- Becker, Ernest: The Denial of Death (Free Press, 1973/1974, 1997): http://books.simonandschuster.com/The-Denial-of-Death/Ernest-Becker/9780684832401 & http://www.amazon.com/Denial-Death-Ernest-Becker/dp/0684832402/ 
+    <!--Becker, Ernest: The Denial of Death (Free Press, 1973/1974, 1997): http://books.simonandschuster.com/The-Denial-of-Death/Ernest-Becker/9780684832401 & http://www.amazon.com/Denial-Death-Ernest-Becker/dp/0684832402/ 
       see also:
       * Erik Buys: "Saved from the Denial of Death?", 26.05.2016: https://erikbuys.wordpress.com/2016/05/26/the-denial-of-death/
       * Ernest Becker Foundation: http://ernestbecker.org/
@@ -458,11 +453,6 @@
         (YouTube, 25 minutes, 20.10.2015): video based on the inaugural talk by
         Keith Davies at Hatfield's Café Scientifique on 14 September 2015.
       </li>
-      <!--
-      <li>
-        <a href=""></a>
-      </li>
-      -->
     </ul>
 
     <h2>A Year of Reading the World</h2>
@@ -1071,6 +1061,13 @@
         <q>On this website you can find a wide range of materials designed to help researchers think about, handle and analyse large volumes of complex qualitative and qualitative longitudinal data, including working with multiple archived data sets.</q>
         <!-- See Sara Lewthwaite: https://twitter.com/slewth/status/1095738137693904896 -->
       </li>
+      <li>
+        <a href="https://en.unesco.org/events/world-humanities-conference">World Humanities Conference</a>,
+        <span lang="fr">Liège</span>, Belgium, 6-12 August 2017. 
+        <!--http://www.unesco.org/new/en/social-and-human-sciences/themes/most-programme/humanities-and-philosophy/world-humanities-conference/
+          Old conference URL no longer available: http://www.humanities2017.org/en
+        -->
+      </li>
       <li><!--@@temp @@move-->
         <a href="https://fivebooks.com/best-books/productivity-david-allen/">The best books on Productivity recommended by David Allen</a>,
         <i class="site">Five Books</i>, 22.08.2019.
@@ -1162,6 +1159,11 @@
     <!--[Royal Anthropological Institute (RAI)’s Education Outreach Programme:] Discover Anthropology: "What is Anthropology?": https://www.discoveranthropology.org.uk/about-anthropology/what-is-anthropology.html + @@links at bottom of page
       London Anthropology Day: https://londonanthropologyday.co.uk/ 
     -->
+      <!--
+      <li>
+        <a href=""></a>
+      </li>
+      -->
 
   </main>
 
