Add: Golmann: Marxisme et sciences humaines

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -1080,10 +1080,14 @@
           <a href="https://sociologydictionary.org/">Open Education Sociology Dictionary</a>,
           edited by <a href="https://kentonville.com/">Kenton Bell</a>.
         </li>
+        <li><span lang="fr">Goldmann, Lucien:
+          <i class="booktitle">Marxisme et sciences humaines</i>. Gallimard,</span> 1970.
+          <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Idees/Marxisme-et-sciences-humaines" hreflang="fr"><abbr>ISBN</abbr> 2070352285</a>.
+        </li>
         <li>
           <a href="http://bigqlr.ncrm.ac.uk/">Big Qual Analysis Resource Hub</a>:
           <q>On this website you can find a wide range of materials designed to help researchers think about, handle and analyse large volumes of complex qualitative and qualitative longitudinal data, including working with multiple archived data sets.</q>
-          <!-- See Sara Lewthwaite: https://twitter.com/slewth/status/1095738137693904896 -->
+          <!--See Sara Lewthwaite: https://twitter.com/slewth/status/1095738137693904896 -->
         </li>
         <li>
           <a href="https://en.unesco.org/events/world-humanities-conference">World Humanities Conference</a>,
