Add: Research Proves That Atheism Leads to Depravity (Spoiler: No)

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -794,6 +794,16 @@
         <!--@@rewatch and summarise-->
       </li>
       <li>
+        <a href="https://www.youtube.com/watch?v=kI_nWY0hlyY">Research Proves That Atheism Leads to Depravity (Spoiler: No) | Joe - <abbr>NY</abbr> | Atheist Experience 24.02</a>
+        (<i class="ytchannel">The Atheist Experience</i> on YouTube, 9 minutes, 15.01.2020).
+        <br />Someone calls into a program wanting to talk about atheist depravity.
+        His first example is Mao Zedong and Pol Pot without being able to point out that it is linked to atheism.
+        He tries to come up with other examples, including divorce, without knowing that
+        <a href="https://www.learnreligions.com/divorce-rates-for-atheists-248494" title="Divorce Rates for Atheists Are Among the Lowest in America">divorce rates among Christians are higher than among atheists</a>.
+        He also supports slavery because it is endorsed by the Bible;
+        he appears to think that it is acceptable to enslave people if they are &ldquo;depraved&rdquo;. (&hellip;)
+      </li>
+      <li>
         <a href="https://www.youtube.com/watch?v=P5ZOwNK6n9U">Ricky Gervais And Stephen Go Head-To-Head On Religion</a>
         (<i class="ytchannel">The Late Show with Stephen Colbert</i> on YouTube, 5 minutes, 02.02.2017).
         <br />When Stephen Colbert asks Ricky Gervais whether atheism isn't just another belief system,
