Add: David Mitchell Doesn't Understand Atheism (And Neither Do Agnostics)

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -794,6 +794,18 @@
         <!--@@rewatch and summarise-->
       </li>
       <li>
+        <a href="https://www.youtube.com/watch?v=bZKaBW9rSaQ">David Mitchell Doesn't Understand Atheism (And Neither Do Agnostics)</a>
+        (<i class="ytchannel">Rationality Rules</i> on YouTube, 12 minutes, 13.01.2018).
+        <br />David Mitchell's autobiograpy
+        <a href="https://en.wikipedia.org/wiki/Back_Story_(autobiography)"><i class="booktitle">Back Story</i></a>
+        (2012), which is otherwise a very enjoyable book, claims that atheism is not the most rational approach
+        but that agnosticism is. Mitchell confuses atheism and agnosticism:
+        whereas atheism and theism are about what you <em>believe</em>, agnosticism is what you <em>know</em>.
+        Atheism should not be identified with the claim that there is no god.
+        Mitchell also misrepresents atheism by claiming atheists believe there would be less evil in the world without religism.
+        <!--@@rewatch and summarise rest of video-->
+      </li>
+      <li>
         <a href="https://www.youtube.com/watch?v=kI_nWY0hlyY">Research Proves That Atheism Leads to Depravity (Spoiler: No) | Joe - <abbr>NY</abbr> | Atheist Experience 24.02</a>
         (<i class="ytchannel">The Atheist Experience</i> on YouTube, 9 minutes, 15.01.2020).
         <br />Someone calls into a program wanting to talk about atheist depravity.
