Add: Rationality Rules: Great Cost of the Kalam

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -337,7 +337,7 @@
         </blockquote>
         <!--See also: How Can the Universe Not Have a Beginning? | Roger Penrose (6 minutes): https://www.youtube.com/watch?v=J98aF22ErZc -->
       </li>
-      <!-- Peter Millican's refutation of Anselm argument:
+      <!--Peter Millican's refutation of Anselm argument:
         https://duckduckgo.com/?q=%22Peter+Millican%22+anselm+god&t=ffab&ia=web
       -->
       <li>Millican, Peter:
@@ -349,6 +349,10 @@
         <a href="https://www.youtube.com/watch?v=MTvrLR3X9ME">Hitchens on Compelling Arguments for the Existence of God</a>
         (<i class="ytchannel">FORA.tv</i> on YouTube, 2 minutes, 09.04.2011).
         <br />From a conversation with Salman Rushdie recorded on 8 June 2010.
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=Qm_6eB5bcos">Great Cost of the Kalam</a>
+        (<i class="ytchannel">Rationality Rules</i> on YouTube, 8 minutes, 05.06.2020).
       </li>
     </ul>
 
