Add: Atheism is Over – Debunked

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -793,6 +793,11 @@
         <!--@@rewatch and summarise-->
       </li>
       <li>
+        <a href="https://www.youtube.com/watch?v=MlW4IU2kRMI">Atheism is Over – Debunked</a>
+        (<i class="ytchannel">Rationality Rules</i> on YouTube, 12 minutes, 19.05.2018).
+        <br />This video responds to another video that gets many things about atheism wrong.
+      </li>
+      <li>
         <a href="https://www.youtube.com/watch?v=zmrpiCsuv6w">Atheists Are Murderers - Debunked (Jordan Peterson)</a>
         (<i class="ytchannel">Rationality Rules</i> on YouTube, 13 minutes, 30.06.2018).
         <!--@@rewatch and summarise-->
