Add: Poetry Foundation: Glossary of Poetic Terms

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -555,6 +555,10 @@
           <a href="https://literarydevices.net/">LiteraryDevices.net</a>.
           (Website maintained by an anonymous person, possibly in the <abbr>USA</abbr>.)
         </li>
+        <li>
+          <a href="https://www.poetryfoundation.org/learn/glossary-terms">Glossary of Poetic Terms</a>,
+          <i class="website">Poetry Foundation</i>.
+        </li>
         <li>Wheeler, I. Kip:
           <a href="http://web.cn.edu/kwheeler/resource_rhet.html">Rhetoric</a>.
           This page briefly introduces the concept of rhetoric, describes a few common rhetorical mistakes and provides a few relevant resources.
