Add: schopenhauer.de

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2084,6 +2084,9 @@
           <i class="blog">Formerly known as a philosopher</i>, 03.02.2020.
           <!--@@summarise; @@PDF-->
         </li>
+        <li>
+          <a href="http://schopenhauer.de/" hreflang="de" lang="de">Schopenhauer-Gesellschaft</a>.
+        </li>
         <!--@@section Chinese philosophy-->
         <li>
           <a href="https://aeon.co/essays/the-influential-confucian-philosopher-you-ve-never-heard-of">The second sage&nbsp;/ The influential Confucian philosopher you’ve never heard of</a>,
