Add: Lanham: A Handlist of Rhetorical Terms

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -573,6 +573,10 @@
           <a href="https://mcl.as.uky.edu/glossary-rhetorical-terms">Glossary of Rhetorical Terms</a>,
           <i class="website">College of Arts &amp; Sciences, University of Kentucky</i>.
         </li>
+        <li>Lanham, Richard A.:
+          <i class="booktitle">A Handlist of Rhetorical Terms</i>. Second edition. University of California Press, 2012. (205 pages)
+          <a href="https://www.ucpress.edu/book/9780520273689/a-handlist-of-rhetorical-terms"><abbr>ISBN</abbr> 9780520273689</a>.
+        </li>
         <li>
           <a href="https://hilbertthm90.wordpress.com/tag/validity-in-interpretation/">blog posts tagged &ldquo;validity in interpretation&rdquo;</a>
           on the blog <i class="blog">A Mind for Madness</i>.<!--by Matt Ward?-->
